...
    });
  };

  return (
    <Wrapper>
      <Title title="All Cuisines" containerStyle={styles.title} />
      <View style={styles.container} testID="restaurantScreen">
        {branches?.length === 0 && !loading ? (
          <View style={styles.errorContainer}>
            <Text style={styles.error}>Restaurant Not Found</Text>
          </View>
        ) : (
          <FlashList
            data={branches}
            renderItem={({item}) => {
              return <RestaurantItem item={item} onPress={onItemPress} />;
...
