...
  const restaurant: MainMenu = MENUS_PAYLOAD.menus.find(
    (item: MainMenu) => item.BranchId === branchId,
  );

  return (
    <Wrapper>
      <View style={styles.menuContainer} testID="restaurantMenuScreen">
        <FlashList
          ListHeaderComponent={() => {
            return (
              <View style={styles.headerContainer}>
                <View style={styles.coverContainer}>
                  <Image
...
