...
  ) {
    showRealFee = false;
  }

  return (
    <TouchableOpacity
      testID="restaurantItem"
      style={styles.container}
      onPress={() => {
        onPress(item);
      }}>
      <View style={styles.imageContainer}>
        <Image source={placeholder} style={styles.image} resizeMode="cover" />
...
